manifest_example/Service/example-service-external-domain.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
  labels:
    name: external-service
spec:
  type: ExternalName
  externalName: example.com
  ports:
    - port: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: curl-pod
spec:
  containers:
    - name: curl-container
      image: khannedy/nginx-curl
