manifest_example/Service/example_nginx_nodeport_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-namespace-default
  labels:
    service: nodeport
spec:
  type: NodePort
  selector:
    content: nginx-pod-rc
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30200
