manifest_example/Service/example_ingress_service_try12.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-gateway-app1
spec:
  selector:
    service: app-pod
  ports:
  - port: 8080
    targetPort: 80


---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cluster-one
  labels:
    label-key1: label-value1
spec:
  rules:
    - host: service1.zack.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: service-gateway-app1
                port:
                   number: 8080
